移动文件夹

--- a/src/components/BtnLogin/index.scss
+++ b/src/components/BtnLogin/index.scss
@@ -6,7 +6,8 @@
   border: 0;
   border-radius: 20px;
   color: $bg-100;
-  padding: 0.6em 1em;
+  padding: 0.7em 1em;
+  // padding: 9px 14px;
   background: $text-300;
   display: flex;
   // transition: background 0.2s;
