--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -25,7 +25,8 @@ $primary-500: #00ddeb;
 $primary-600: #94cdf8;
 $primary-700: #94cdf8;
 $primary-800: #0093e9; //立方体颜色
-$primary-900: #94b5ff; //立方体颜色
+$primary-900: #94b5ff;
+$primary-900: #e5f3ff; //立方体颜色
 
 $accent-100: #f64d28; //强调颜色
 $accent-200: #006fff;
@@ -36,5 +37,6 @@ $accent-600: #ff0f7b;
 $accent-700: #2d79f3;
 $accent-800: #ef4444;
 $accent-900: #10b981;
+$accent-1000: #fb6547;
 
 $border-color-100: #e8e8e8;
