--- a/src/page/manage/children/knowledge/index.scss
+++ b/src/page/manage/children/knowledge/index.scss
@@ -3,15 +3,19 @@
   padding: 15px;
   padding-top: 0;
   position: relative;
-  .knowledge-title-bread {
+  .knowledge-title-screen {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0px 5px;
     padding-bottom: 10px;
   }
+
   .knowledge-list {
     .knowledge-list-title {
       margin-bottom: 20px;
       display: flex;
-      justify-content: flex-end;
+      align-items: center;
       position: absolute;
       top: -49px;
       right: 15px;
@@ -99,6 +103,7 @@
       justify-content: flex-end;
     }
   }
+  // 知识库列表
   .knowledge-detail {
     .knowledge-detail-title {
       margin-bottom: 20px;
@@ -107,6 +112,22 @@
       position: absolute;
       top: -49px;
       right: 15px;
+    }
+    .knowledge-detail-content {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      width: 100%;
+      .knowledge-detail-table {
+        width: 100%;
+      }
+      // 空
+      .knowledge-content-empty {
+        height: calc(100vh - 350px);
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+      }
     }
   }
 }
@@ -135,6 +156,9 @@
     img {
       height: 24px;
     }
+    i {
+      font-size: 12px;
+    }
   }
 }
 // list-弹框-title
@@ -157,16 +181,24 @@
   .knowledge-detail-radio-item {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    // padding: 20px;
+    padding: 15px 20px 30px 20px;
     background-color: #f7f8fa;
     border: 1px solid rgb(232, 235, 240);
     box-sizing: border-box;
     border-radius: 8px;
     @media screen and (max-width: 768px) {
-      padding: 15px;
+      padding: 10px 15px 25px 15px;
     }
     .knowledge-detail-radio-content {
-      width: 100%;
+      > :first-child {
+        margin-bottom: 1px;
+      }
+      > :last-child {
+        font-size: 12px;
+        opacity: 0.3;
+        position: absolute;
+      }
     }
   }
 }
