--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.woff2?t=1705654801621') format('woff2'),
-       url('iconfont.woff?t=1705654801621') format('woff'),
-       url('iconfont.ttf?t=1705654801621') format('truetype');
+  src: url('iconfont.woff2?t=1705839305836') format('woff2'),
+       url('iconfont.woff?t=1705839305836') format('woff'),
+       url('iconfont.ttf?t=1705839305836') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-xuhao-F:before {
+  content: "\e663";
 }
 
 .mr-xuanze:before {
