--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.woff2?t=1705839305836') format('woff2'),
-       url('iconfont.woff?t=1705839305836') format('woff'),
-       url('iconfont.ttf?t=1705839305836') format('truetype');
+  src: url('iconfont.woff2?t=1705920568543') format('woff2'),
+       url('iconfont.woff?t=1705920568543') format('woff'),
+       url('iconfont.ttf?t=1705920568543') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,30 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-data:before {
+  content: "\e664";
+}
+
+.mr-add:before {
+  content: "\e665";
+}
+
+.mr-examine:before {
+  content: "\e666";
+}
+
+.mr-delete:before {
+  content: "\e667";
+}
+
+.mr-qrcode:before {
+  content: "\e668";
+}
+
+.mr-validate:before {
+  content: "\e669";
 }
 
 .mr-xuhao-F:before {
