--- a/src/page/manage/children/create-preview/index.scss
+++ b/src/page/manage/children/create-preview/index.scss
@@ -8,5 +8,46 @@
     width: 50%;
   }
   .create-container {
+    header {
+      .create-prompt-tips {
+        font-size: 14px;
+        opacity: 0.5;
+        margin: 10px 0;
+      }
+      .create-prompt-box {
+        width: 95%;
+        height: 320px;
+        border: 2px solid $primary-200;
+        border-radius: 10px;
+        padding: 38px 15px 40px 15px;
+        box-sizing: border-box;
+        position: relative;
+        .create-promp-box-header {
+          position: absolute;
+          top: 10px;
+
+          i {
+            font-size: 18px;
+            margin-right: 5px;
+            margin-bottom: 3px;
+            background-image: linear-gradient(#af40ff, #5b42f3 50%, #00ddeb);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+          }
+          img {
+            cursor: pointer;
+          }
+        }
+        .create-promp-box-footer {
+          position: absolute;
+          bottom: 10px;
+        }
+      }
+    }
+    main {
+      margin: 50px 0;
+      .create-base-Info {
+      }
+    }
   }
 }
