feat(manage/create-preview): 创建角色

--- a/src/components/upload-image/index.scss
+++ b/src/components/upload-image/index.scss
@@ -1,2 +1,15 @@
 // .upload-container {
 // }
+
+.ant-upload-wrapper.ant-upload-picture-card-wrapper
+  .ant-upload.ant-upload-select {
+  width: 80px;
+  height: 80px;
+}
+
+.ant-upload-wrapper.ant-upload-picture-card-wrapper
+  .ant-upload-list.ant-upload-list-picture-card
+  .ant-upload-list-item-container {
+  width: 80px;
+  height: 80px;
+}
