--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -147,6 +147,12 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+// 文字渐变
+.gradient-text-3 {
+  background-image: linear-gradient(43deg, #af40ff, #5b42f3 50%, #00ddeb);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 // 文字居中
 .text-center {
@@ -162,6 +168,22 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE , Edge */
   user-select: none; /* Standard syntax */
+}
+
+// 自定义textarea，取消默认颜色
+.remove-default-textarea {
+  border: none;
+  outline: none;
+  resize: none; /* 可选，禁止调整文本区域大小 */
+  background-color: transparent;
+  &:focus {
+    box-shadow: none;
+  }
+}
+
+// 设置正方形
+.square {
+  aspect-ratio: 1/1;
 }
 
 // 点击放大
