--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -27,6 +27,7 @@ $primary-700: #94cdf8;
 $primary-800: #0093e9; //立方体颜色
 $primary-900: #94b5ff;
 $primary-1000: #e5f3ff;
+$primary-1100: #cbf7cc;
 
 $accent-100: #f64d28; //强调颜色
 $accent-200: #006fff;
