--- a/src/page/manage/children/chat/index.scss
+++ b/src/page/manage/children/chat/index.scss
@@ -1,6 +1,6 @@
 @import '@/styles/theme';
 // 共有样式
-.create-preview-container {
+.chat-container-box {
   box-sizing: border-box;
   padding: 15px;
   width: 100%;
