--- a/src/layouts/admin/components/dropdown-user/index.scss
+++ b/src/layouts/admin/components/dropdown-user/index.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   box-sizing: border-box;
 
   > header {
