--- a/src/page/manage/children/chat/children/chat-ctx/chat.scss
+++ b/src/page/manage/children/chat/children/chat-ctx/chat.scss
@@ -10,7 +10,7 @@
   }
   // 聊天
   main {
-    // background-color: pink;
+    scroll-behavior: smooth; //平滑滚动
     height: calc(100% - 49px);
     overflow-y: auto;
     &::-webkit-scrollbar {
@@ -45,6 +45,7 @@
         margin: 30px 0;
         border-radius: 10px;
         display: flex;
+
         > img {
           height: 30px;
           border-radius: 50%;
@@ -54,6 +55,18 @@
           max-width: 85%;
           background-color: $primary-1100;
           border-radius: 4px;
+          position: relative;
+          // 刷新
+          .msg-refush {
+            position: absolute;
+            right: -15px;
+            top: 0px;
+
+            cursor: pointer;
+            > i {
+              font-size: 14px;
+            }
+          }
         }
       }
       // 用户消息
