feat(MarkdownRenderer): 增加代码高亮主题

--- a/src/page/manage/children/create-preview/children/preview/preview.scss
+++ b/src/page/manage/children/create-preview/children/preview/preview.scss
@@ -34,7 +34,7 @@
     }
     .preview-chat-main {
       font-size: 14px;
-
+      overflow-x: hidden;
       > div {
         margin: 30px 0;
         border-radius: 10px;
