--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -39,6 +39,7 @@ $accent-700: #2d79f3;
 $accent-800: #ef4444;
 $accent-900: #10b981;
 $accent-1000: #fb6547;
+$accent-1100: #007acc;
 
 $border-color-100: #e8e8e8;
 $border-color-200: #e5e7eb;
