--- a/src/page/manage/children/chat/children/chat-ctx/chat.scss
+++ b/src/page/manage/children/chat/children/chat-ctx/chat.scss
@@ -25,13 +25,18 @@
       border-radius: 10px;
       background-color: $primary-1000;
       box-shadow: $shadow-200;
+      .chat-prompt-title {
+        i,
+        > :last-child {
+          background-image: linear-gradient(#af40ff, #5b42f3 50%, #00ddeb);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+      }
       i {
         font-size: 16px;
         margin-right: 5px;
         margin-bottom: 3px;
-        background-image: linear-gradient(#af40ff, #5b42f3 50%, #00ddeb);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
       }
       .chat-prompt-text {
         margin-top: 5px;
@@ -52,11 +57,14 @@
           border-radius: 50%;
         }
         .msg-item {
-          padding: 8px 10px;
-          max-width: 85%;
+          padding: 8px 12px 0 12px;
+          max-width: calc(100% - 95px);
           background-color: $primary-1100;
           border-radius: 4px;
           position: relative;
+          @media screen and (max-width: 768px) {
+            max-width: calc(100% - 72px);
+          }
           // 刷新
           .msg-refush {
             position: absolute;
@@ -72,7 +80,7 @@
       }
       // 用户消息
       .user-msg {
-        text-align: right;
+        // text-align: right;
         justify-content: flex-end;
         > img {
           margin-left: 5px;
@@ -82,11 +90,15 @@
       .bot-msg {
         text-align: left;
         justify-content: flex-start;
+        transition: opacity 0.3s ease;
         > div {
           background-color: $bg-200;
         }
         > img {
           margin-right: 5px;
+        }
+        &.hide {
+          opacity: 0;
         }
       }
     }
@@ -101,7 +113,7 @@
       width: 100%;
       display: flex;
       align-items: flex-end;
-      transition: 2s;
+      // transition: 2s;
       .chat-text-area-box {
         padding: 3px 0;
         flex: 1;
@@ -150,7 +162,7 @@
       .chat-text-extend-item {
         cursor: pointer;
         flex-direction: column;
-        width: calc((100% / 6));
+        width: calc((100% / 9 - 20px));
         aspect-ratio: 1/1;
         // width: 80px;
         // height: 80px;
@@ -181,6 +193,54 @@
         .chat-text-extend-item {
           width: calc((100% / 4) - 10px);
         }
+      }
+    }
+  }
+}
+
+// 黑暗模式
+.chat-container.dark-mode {
+  main {
+    .chat-prompt-box {
+      background-color: $text-300;
+      .chat-prompt-title {
+        i,
+        > :last-child {
+          background-image: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+        }
+      }
+    }
+    .chat-chat-main {
+      > div {
+        .msg-item {
+          background-color: $primary-100;
+        }
+      }
+      // 机器人消息
+      .bot-msg {
+        > div {
+          background-color: $text-300;
+        }
+      }
+    }
+  }
+  footer {
+    background-color: $text-200;
+    .chat-text-send-container {
+      .chat-text-area-box {
+        border: 1px solid rgba($color: $border-color-200, $alpha: 0.8);
+        color: $bg-100;
+        .custom-placeholder::placeholder {
+          color: #fff;
+          opacity: 0.8;
+        }
+      }
+    }
+    .chat-text-extend-container {
+      .chat-text-extend-item {
+        background-color: $text-300;
+        color: $bg-100;
+        border: 1px solid rgba($color: $border-color-200, $alpha: 0);
       }
     }
   }
