--- a/src/page/manage/children/create-preview/children/create/create.scss
+++ b/src/page/manage/children/create-preview/children/create/create.scss
@@ -92,9 +92,82 @@
 
   .create-modal-chat-list {
     background-color: $bg-200;
-    height: 150px;
+
     border-radius: 10px;
     padding: 12px;
+    position: relative;
+
+    // 编辑
+    .create-modal-chat-history-edit {
+      position: absolute;
+      right: 8px;
+      top: 8px;
+      font-size: 14px;
+      display: flex;
+      justify-content: flex-end;
+      cursor: pointer;
+      border-radius: 50%;
+      z-index: 1;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      > i {
+        margin: 0 auto;
+      }
+    }
+    // 聊天记录-预设对话
+    .create-modal-chat-history {
+      scroll-behavior: smooth; //平滑滚动
+      font-size: 14px;
+      width: 100%;
+      height: 250px;
+      overflow: auto;
+      > div {
+        margin: 15px 0;
+        border-radius: 10px;
+        display: flex;
+        > img {
+          height: 30px;
+          border-radius: 50%;
+        }
+
+        .msg-item {
+          padding: 8px 12px 0 12px;
+          background-color: $primary-1100;
+          border-radius: 4px;
+          position: relative;
+        }
+        .msg-item-edit {
+          width: 100%;
+          .msg-item-del {
+            cursor: pointer;
+            position: relative;
+            font-size: 16px;
+            left: 2px;
+            opacity: 0.3;
+            transition: opacity 0.3s;
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      }
+      // 用户消息
+      .user-msg {
+        > img {
+          margin-right: 5px;
+        }
+      }
+      // 机器人消息
+      .bot-msg {
+        .msg-item {
+          background-color: $bg-100;
+        }
+        > img {
+          margin-right: 5px;
+        }
+      }
+    }
   }
   .create-modal-chat {
     border: 2px solid $primary-200;
@@ -110,12 +183,20 @@
       }
     }
     .create-modal-chat-body {
-      min-height: 100px;
+      min-height: 40px;
     }
   }
 }
 .create-container-modal-footer {
   margin-top: 20px;
+  .create-container-modal-footer-tips {
+    text-align: center;
+    margin-bottom: 10px;
+    opacity: 0.6;
+    @media screen and (max-width: 780px) {
+      display: none;
+    }
+  }
 }
 
 // 知识库下拉
@@ -124,4 +205,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+@media screen and (max-width: 780px) {
+  .ant-modal .ant-modal-content {
+    padding: 20px 15px;
+  }
 }
