--- a/src/page/manage/children/create-preview/children/create/create.scss
+++ b/src/page/manage/children/create-preview/children/create/create.scss
@@ -39,6 +39,7 @@
   }
   main {
     margin: 50px 0;
+    margin-top: 30px;
     .create-base-Info {
       width: 100%;
       margin-bottom: 30px;
