--- a/src/page/manage/children/chat/children/chat-ctx/chat.scss
+++ b/src/page/manage/children/chat/children/chat-ctx/chat.scss
@@ -214,7 +214,7 @@
         justify-content: flex-start;
         transition: opacity 0.3s ease;
         > div {
-          background-color: $bg-200;
+          background: $bg-200;
         }
         > img {
           margin-right: 5px;
@@ -369,14 +369,13 @@
     .chat-chat-main {
       > div {
         .msg-item {
-          // background: $primary-100;
           background: linear-gradient(269deg, #5d66ff -3.63%, #a171ff 100.38%);
         }
       }
       // 机器人消息
       .bot-msg {
         > div {
-          background-color: $text-300;
+          background: $text-300;
         }
       }
     }
