--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.woff2?t=1706758278013') format('woff2'),
-       url('iconfont.woff?t=1706758278013') format('woff'),
-       url('iconfont.ttf?t=1706758278013') format('truetype');
+  src: url('iconfont.woff2?t=1706781832979') format('woff2'),
+       url('iconfont.woff?t=1706781832979') format('woff'),
+       url('iconfont.ttf?t=1706781832979') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-stop:before {
+  content: "\ea89";
 }
 
 .mr-shoucangtianchong:before {
