feat(chat): 编辑对话

--- a/src/page/manage/children/chat/index.scss
+++ b/src/page/manage/children/chat/index.scss
@@ -11,4 +11,13 @@
     padding: 10px;
     padding-top: 0;
   }
+
+  .chat-container-nav {
+    position: fixed;
+    top: 65px;
+    left: 75px;
+    background-color: pink;
+    height: 100%;
+    padding: 10px;
+  }
 }
