--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -232,7 +232,7 @@ a.no-style {
   background-size: 1.1rem 1.1rem;
 }
 
-// 停止 - 放大缩小
+// 停止效果 - 放大缩小
 .stop-scale {
   display: block;
   animation: icon-scale 0.3s infinite alternate-reverse;
@@ -502,8 +502,8 @@ a.no-style {
 
 // 模拟app打开
 .click-app-box:active {
-  transform: scale(0.95);
-  opacity: 0.7;
+  transform: scale(0.98);
+  opacity: 0.9;
   transition: 100ms;
 }
 
